--- a/package.json
+++ b/package.json
@@ -11,18 +11,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "africastalking": "^0.7.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.30.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "follow-redirects": "^1.15.9",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.8.0",
     "mongoose": "^8.6.0",
-    "nodemailer": "^6.9.14"
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.14",
+    "pdf-lib": "^1.17.1",
+    "twilio": "^5.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
